camel-quarkus/3.27.x/reference/others.md
# Camel misc. components supported on Quarkus

There are 31 misc. components (0 deprecated, 6 JVM only)

     
| Misc. component | Artifact | JVM  
since | Native  
since | Support  
level | Description |
| --- | --- | --- | --- | --- | --- |
| [Attachments](extensions/attachments.md) | camel-quarkus-attachments | 0.3.0 | 0.3.0 | Stable | Support for attachments on Camel messages |
| [AWS XRay](extensions/aws-xray.md) | camel-quarkus-aws-xray | 1.2.0 | n/a | Preview | Enable Distributed tracing using AWS XRay |
| [CLI Connector](extensions/cli-connector.md) | camel-quarkus-cli-connector | 3.2.0 | n/a | Preview | Runtime adapter connecting with Camel CLI |
| [Cloudevents](extensions/cloudevents.md) | camel-quarkus-cloudevents | 2.14.0 | 2.14.0 | Stable | Camel support for the CloudEvents specification |
| [Console](extensions/console.md) | camel-quarkus-console | 2.16.0 | n/a | Preview | Camel Developer Console |
| [Debug](extensions/debug.md) | camel-quarkus-debug | 2.10.0 | 3.2.0 | Stable | Enables Camel Route Debugging |
| [DSL Modeline](extensions/dsl-modeline.md) | camel-quarkus-dsl-modeline | 2.14.0 | n/a | Preview | Camel DSL modeline |
| [Headersmap](extensions/headersmap.md) | camel-quarkus-headersmap | 1.2.0 | 1.2.0 | Stable | Fast case-insensitive headers map implementation |
| [Jasypt](extensions/jasypt.md) | camel-quarkus-jasypt | 1.2.0 | 3.7.0 | Stable | Security using Jasypt |
| [Java DSL (runtime compiled)](extensions/java-joor-dsl.md) | camel-quarkus-java-joor-dsl | 1.8.0 | 2.16.0 | Stable | Camel Java DSL with jOOR |
| [JFR](extensions/jfr.md) | camel-quarkus-jfr | 1.7.0 | 2.6.0 | Stable | Diagnose Camel applications with Java Flight Recorder |
| [JTA](extensions/jta.md) | camel-quarkus-jta | 1.0.0 | 1.0.0 | Stable | Using Camel With JTA Transaction Manager |
| [LangChain4j Tokenizer](extensions/langchain4j-tokenizer.md) | camel-quarkus-langchain4j-tokenizer | 3.15.0 | 3.24.0 | Stable | LangChain4j Tokenizer |
| [LevelDB](extensions/leveldb.md) | camel-quarkus-leveldb | 1.2.0 | 1.2.0 | Stable | Using LevelDB as persistent EIP store |
| [LRA](extensions/lra.md) | camel-quarkus-lra | 1.2.0 | 1.8.0 | Stable | Camel saga binding for Long-Running-Action framework |
| [Mail Microsoft Oauth](extensions/mail-microsoft-oauth.md) | camel-quarkus-mail-microsoft-oauth | 3.8.0 | 3.25.0 | Stable | Camel Mail OAuth2 Authenticator for Microsoft Exchange Online |
| [Management](extensions/management.md) | camel-quarkus-management | 1.1.0 | n/a | Preview | Camel Management |
| [Microprofile Fault Tolerance](extensions/microprofile-fault-tolerance.md) | camel-quarkus-microprofile-fault-tolerance | 1.0.0 | 1.0.0 | Stable | Circuit Breaker EIP using MicroProfile Fault Tolerance |
| [Microprofile Health](extensions/microprofile-health.md) | camel-quarkus-microprofile-health | 0.3.0 | 0.3.0 | Stable | Expose Camel health checks via MicroProfile Health |
| [Observability Services](extensions/observability-services.md) | camel-quarkus-observability-services | 3.19.0 | 3.19.0 | Stable | Camel Observability Services |
| [Openapi Java](extensions/openapi-java.md) | camel-quarkus-openapi-java | 1.0.0 | 1.0.0 | Stable | Rest DSL support for using OpenApi doc |
| [OpenTelemetry](extensions/opentelemetry.md) | camel-quarkus-opentelemetry | 2.1.0 | 2.1.0 | Stable | Distributed tracing using OpenTelemetry |
| [Opentelemetry2](extensions/opentelemetry2.md) | camel-quarkus-opentelemetry2 | 3.22.0 | 3.22.0 | Stable | Implementation of Camel Opentelemetry based on the Camel Telemetry spec |
| [Reactive Executor Vert.x](extensions/reactive-executor.md) | camel-quarkus-reactive-executor | 0.3.0 | 0.3.0 | Stable | Reactive Executor for camel-core using Vert.x |
| [Redis](extensions/redis.md) | camel-quarkus-redis | 1.6.0 | n/a | Preview | Aggregation repository using Redis as datastore |
| [Shiro](extensions/shiro.md) | camel-quarkus-shiro | 1.2.0 | 1.2.0 | Stable | Security using Shiro |
| [Telemetry Dev](extensions/telemetry-dev.md) | camel-quarkus-telemetry-dev | 3.22.0 | 3.22.0 | Stable | Basic implementation of Camel Telemetry useful for development purposes |
| [ThreadPoolFactory Vert.x](extensions/threadpoolfactory-vertx.md) | camel-quarkus-threadpoolfactory-vertx | 1.0.0 | 1.0.0 | Stable | ThreadPoolFactory for camel-core using Vert.x |
| [XML DSL](extensions/xml-io-dsl.md) | camel-quarkus-xml-io-dsl | 1.8.0 | 1.8.0 | Stable | Camel XML DSL with camel-xml-io |
| [YAML DSL](extensions/yaml-dsl.md) | camel-quarkus-yaml-dsl | 1.8.0 | 1.8.0 | Stable | Camel DSL with YAML |
| [Yaml Io](extensions/yaml-io.md) | camel-quarkus-yaml-io | 3.0.0 | 3.0.0 | Stable | Camel YAML IO |